# workshop-airflow-dbt-local-setup

./: .gitignore  pyproject.toml
