[project]
name = "1-local-setup"
version = "0.1.0"
description = ""
authors = [
    {name = "andremanesco",email = "andrem_araujo@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.9.8,<2.0.0)",
    "dbt-postgres (>=1.9.0,<2.0.0)",
    "duckdb (>=1.3.0,<2.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
